2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/dl.c (grub_arch_dl_relocate_symbols): Handle
	R_MIPS_JALR since it's used by newer compiler.

2011-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Correctly handle the Linux in root.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/chainloader.c (grub_chainloader_unload): Set
	file_path to 0 for surety.
	(grub_chainloader_boot): Set exit_data to NULL.
	Unset the loader once done.
	(grub_cmd_chainloader): Fix confusing error message if file is empty.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (fetch_key): Make a printf on
	unknown key into a dprintf.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Don't abort
	on first non-existant partition.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (open_device): Set data->fd to -1 if
	openning fails.
	Reported by: Mark Korenberg.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Prevent possible
	overflow.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (main): Explicitely flush and sync the output
	before closing to ensure that it will be readable by grub-setup.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/appleloader.c (MAKE_PIWG_PATH): New macro.
	(devpath_1): Use MAKE_PIWG_PATH.
	(devpath_2): Likewise.
	(devpath_3): Likewise.
	(devpath_4): Likewise.
	(devpath_5): Likewise.
	(devpath_6): Likewise.

	The appleldr.mod was checked that to be binary identical to previous
	version.

2011-05-05  Zach <mikezackles>

	Support 2010 Macbooks.

	* grub-core/loader/efi/appleloader.c (devpath_6): New variable.
	(devs): Add devpath_6.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>
